feat(js): refactor de estilos para navbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,12 @@
+*{
+  font-size: 16px;
+}
+
+body{
+  background-color: #FAF8F6;
+  font-family: "Poppins", sans-serif;
+}
+
 .btn-custom-primary{
   background-color: #708871;
   border: 1px solid #708871;
