feat(js): cambio de diseño

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,20 +5,57 @@
 body{
   background-color: #FAF8F6;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 .btn-custom-primary{
-  background-color: #708871;
-  border: 1px solid #708871;
+  background: linear-gradient(122deg, rgba(251,201,142,1) 0%, rgba(248,158,144,1) 50%, rgba(246,101,149,1) 100%);;
+  border: none;
   border-radius: 24px;
   max-width: 306px;
   width: 100%;
 }
 
-.FormGeneral{
-  max-width: 768px;
-  margin: 0px auto;
-  border-radius: 25px;
-  box-shadow: 0px 0px 6px -2px #606676;
-  padding: 32px;
+.wave{
+  position: absolute;
+  top: 0;
+  z-index: -100;
+  left: 0;
+  height: 100%;
+  animation: moveRight 100s linear infinite;
+}
+
+@keyframes moveRight {
+  0% {
+    left: 0;
+  }
+  50%{
+    left: -60%;
+  }
+  100% {
+    left: 0%;
+  }
+
+}
+
+.panel{
+  background-color: rgba(255, 254, 254, 0.6);
+  border-radius: 50px;
+  padding: 2rem;
+  box-shadow: 0px 0px 26px 0px rgba(255, 254, 254, 0.6);
+ 
+    
+    & a {
+      color: #f66595;
+      text-decoration: none;
+      & svg {
+        width: 20px;
+        height: 20px;
+      }
+    }
+  
+}
+
+.text-salmon{
+  color: #f66595;
 }
