--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -8,10 +8,10 @@
         width: 28px;
         height: 28px;
         color: white;
-        background-color: #708871;
+        background-color: #f66595;
     }
     .swiper-button-prev, .swiper-button-next {
-        color: #708871 !important;
+        color: #f66595 !important;
     }
     @media screen and (max-width: 575px) {
         & .swiper-slide{
