--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@
     &__logo{
         & p {
             font-size: 1.8rem;
+            color: #FAF8F6;
             @media screen and (max-width:768px) {
                 font-size: 1.4rem;
             }
@@ -13,7 +14,7 @@
     }
     &__links{
         & a {
-            color: black;
+            color: #FAF8F6;
             text-decoration: none;
             &:hover {
                 color: rgb(246,101,149);
@@ -51,7 +52,10 @@
             @extend .Navbar__navigation;
             width: 0px;
         }
+        border-top-right-radius: 25px;
+        border-bottom-right-radius: 25px;
         background: linear-gradient(122deg, rgba(251,201,142,1) 0%, rgba(248,158,144,1) 50%, rgba(246,101,149,1) 100%);
+        box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.75);
         position: absolute;
         top: 0;
         left: 0;
