--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,21 @@
-*{
-  font-size: 16px;
+@import './sass/variables';
+
+* {
+  font-size: $rem;
 }
 
 body{
-  background-color: #FAF8F6;
-  font-family: "Poppins", sans-serif;
+  background-color: $white;
+  font-family: $text-general;
   overflow-x: hidden;
+
 }
 
 .btn-custom-primary{
-  background: linear-gradient(122deg, rgba(251,201,142,1) 0%, rgba(248,158,144,1) 50%, rgba(246,101,149,1) 100%);;
+  background: linear-gradient(122deg, $salmon-light-color 0%, $salmon-medium-color 50%, $salmon-color 100%);;
   border: none;
-  border-radius: 24px;
-  max-width: 306px;
+  border-radius: $radius-1;
+  max-width: 16 * $rem;
   width: 100%;
 }
 
@@ -40,13 +43,13 @@ body{
 
 .panel{
   background-color: rgba(255, 254, 254, 0.6);
-  border-radius: 50px;
+  border-radius: 2 * $radius-1;
   padding: 2rem;
   box-shadow: 0px 0px 26px 0px rgba(255, 254, 254, 0.6);
  
     
     & a {
-      color: #f66595;
+      color: $salmon-color;
       text-decoration: none;
       & svg {
         width: 20px;
@@ -57,5 +60,5 @@ body{
 }
 
 .text-salmon{
-  color: #f66595;
+  color: $salmon-color;
 }
