--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,78 +1,97 @@
-.Navbar{
+@import '../../sass/variables';
+
+.Navbar {
     height: 9rem;
-    @media screen and (max-width:768px) {
+
+    @media screen and (max-width:$bp-sm) {
         height: 6rem;
     }
-    &__logo{
+
+    &__logo {
         & p {
             font-size: 1.8rem;
-            color: #FAF8F6;
-            @media screen and (max-width:768px) {
+            color: $white;
+
+            @media screen and (max-width:$bp-sm) {
                 font-size: 1.4rem;
             }
         }
     }
-    &__links{
+
+    &__links {
         & a {
-            color: #FAF8F6;
+            color: $white;
             text-decoration: none;
+
             &:hover {
-                color: rgb(246,101,149);
+                color: $salmon-color;
             }
+
             & span {
                 font-size: 1.2rem;
-                @media screen and (max-width:768px) {
+
+                @media screen and (max-width:$bp-sm) {
                     font-size: 1rem;
                 }
             }
         }
+
         & .active {
-            color: rgb(246,101,149);
+            color: $salmon-color;
         }
     }
-    &__profile{
+
+    &__profile {
         & img {
             width: 3rem;
             height: 3rem;
-            border-radius: 25px;
-            border: 2px solid black;
+            border-radius: $radius-1;
+            border: 2px solid $white;
             cursor: pointer;
         }
     }
-    &__button{
+
+    &__button {
         border: none;
         background-color: transparent;
+
         & img {
             width: 2rem;
             height: 2rem;
         }
     }
-    &__navigation{
-        &--closed{
+
+    &__navigation {
+        &--closed {
             @extend .Navbar__navigation;
             width: 0px;
         }
-        border-top-right-radius: 25px;
-        border-bottom-right-radius: 25px;
-        background: linear-gradient(122deg, rgba(251,201,142,1) 0%, rgba(248,158,144,1) 50%, rgba(246,101,149,1) 100%);
-        box-shadow: 0px 0px 26px 0px rgba(0,0,0,0.75);
+
+        border-top-right-radius: $radius-1;
+        border-bottom-right-radius: $radius-1;
+        background: linear-gradient(122deg, $salmon-light-color 0%, $salmon-medium-color 50%, $salmon-color 100%);
+        box-shadow: 0px 0px 26px 0px $black;
         position: absolute;
         top: 0;
         left: 0;
         width: 70%;
         height: 100%;
-        transition: 200ms;
+        transition: $transition;
         z-index: 1000;
-        &--header{
+
+        &--header {
             & p {
-                color: #FAF8F6;
+                color: $white;
             }
-            border-bottom: 1px solid #FAF8F6;
+
+            border-bottom: 1px solid $white;
         }
-        &--links{
+
+        &--links {
             @extend .Navbar__links;
+
             & a {
-                color: #FAF8F6;
+                color: $white;
             }
         }
     }
